policies/kyverno/disallow-privileged.yaml
# OSCAL-CONTROL: AC-6 (Least Privilege)
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
  annotations:
    policies.kyverno.io/title: Disallow Privileged Containers
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/description: >-
      Prevents containers from running in privileged mode or with
      host namespaces. Enforces the principle of least privilege
      for all workloads.
    nist-800-53: AC-6
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: disallow-privileged-containers
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Privileged containers are not allowed. Containers must not
          set securityContext.privileged to true.
        pattern:
          spec:
            containers:
              - =(securityContext):
                  =(privileged): false
    - name: disallow-host-namespaces
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Host namespaces (hostNetwork, hostPID, hostIPC) are not
          allowed in DoD IL5 environments.
        pattern:
          spec:
            =(hostNetwork): false
            =(hostPID): false
            =(hostIPC): false
    - name: disallow-privilege-escalation
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Privilege escalation is not allowed. Set
          allowPrivilegeEscalation to false.
        pattern:
          spec:
            containers:
              - securityContext:
                  allowPrivilegeEscalation: false
